# lincolns-rotten-mustard

./: .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-2-link
src/: lib.rs  main.rs
