[package]
name = "rotten-mustard"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.16.1", features = ["dynamic_linking", "wayland"]}
bevy_rapier3d = { version = "0.31.0", features = ["simd-stable", "debug-render-3d"]}
iyes_perf_ui = "0.5.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
