[package]
name = "rotten-mustard"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.16.1", features = ["dynamic_linking", "wayland"]}
bevy_rapier3d = { version = "0.31.0", features = ["simd-stable", "debug-render-3d", "parallel"]}
iyes_perf_ui = "0.5.0"

rand = "0.9.2"
rand_distr = "0.5.1"

ipc-channel = "0.20.2"
serde = { version = "1.0.228", features = ["derive"] }

burn = { version = "0.19.1", default-features = false, features = ["std", "wgpu", "train"] }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[lib]
name = "shared"
path = "src/lib.rs"

[[bin]]
name = "physics"
path = "src/bin/physics.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[[bin]]
name = "use_physics"
path = "src/bin/use_physics.rs"